# nlir

./: .envrc  .gitignore  Cargo.toml  README.md  SPEC.md  config.example.yaml  flake.nix  justfile  package.json  rustfmt.toml
.beads/: issues.jsonl
.cacophony/agent/aurora-nlir-nlir-dev-aur-0/summary/0000/: summary.md
.cacophony/agent/aurora-nlir-nlir-dev-aur-0/summary/0001/: summary.md
.cacophony/agent/aurora-nlir-nlir-dev-aur-0/summary/0002/: summary.md
.cacophony/agent/aurora-nlir-nlir-dev-aur-1/summary/0000/: summary.md
.cacophony/agent/aurora-nlir-nlir-dev-aur-1/summary/0001/: summary.md
.cacophony/agent/aurora-nlir-nlir-dev-aur-1/summary/0002/: summary.md
.cacophony/agent/aurora-nlir-nlir-dev-aur-1/summary/0003/: summary.md
.cacophony/agent/aurora-nlir-nlir-dev-aur-1/summary/0004/: summary.md
.cacophony/agent/aurora-nlir-nlir-dev-aur-1/summary/0005/: summary.md
.cacophony/agent/aurora-nlir-nlir-dev-aur-1/summary/0006/: summary.md
.cacophony/agent/aurora-nlir-nlir-dev-aur-1/summary/0007/: summary.md
.cacophony/agent/aurora-nlir-nlir-dev-aur-1/summary/0008/: summary.md
.cacophony/agent/aurora-nlir-nlir-dev-aur-1/summary/0009/: summary.md
.cacophony/agent/aurora-nlir-nlir-dev-aur-1/summary/0010/: summary.md
.cacophony/agent/aurora-nlir-nlir-dev-aur-1/summary/0011/: summary.md
.cacophony/agent/aurora-nlir-nlir-dev-aur-1/summary/0012/: summary.md
.cacophony/agent/aurora-nlir-nlir-dev-aur-1/summary/0013/: summary.md
.cacophony/agent/aurora-nlir-nlir-dev-aur-1/summary/0014/: summary.md
.cacophony/agent/aurora-nlir-nlir-dev-aur-1/summary/0015/: summary.md
.cacophony/agent/aurora-nlir-nlir-dev-aur-1/summary/0016/: summary.md
.cacophony/agent/aurora-nlir-nlir-dev-aur-1/summary/0017/: summary.md
.cacophony/agent/aurora-nlir-nlir-dev-aur-1/summary/0018/: summary.md
.cacophony/agent/aurora-nlir-nlir-dev-aur-1/summary/0019/: summary.md
.cacophony/agent/aurora-nlir-nlir-dev-aur-1/summary/0020/: summary.md
.cacophony/agent/aurora-nlir-nlir-dev-aur-1/summary/0021/: summary.md
.cacophony/agent/aurora-nlir-nlir-dev-aur-1/summary/0022/: summary.md
.cacophony/agent/aurora-nlir-nlir-dev-aur-1/summary/0023/: summary.md
.cacophony/agent/aurora-nlir-nlir-dev-aur-1/summary/0024/: summary.md
.cacophony/agent/aurora-nlir-nlir-dev-aur-1/summary/0025/: summary.md
.cacophony/agent/aurora-nlir-nlir-dev-aur-1/summary/0026/: summary.md
.cacophony/agent/aurora-nlir-nlir-dev-aur-1/summary/0027/: summary.md
.cacophony/agent/aurora-nlir-nlir-dev-aur-1/summary/0028/: summary.md
.cacophony/agent/aurora-nlir-nlir-dev-aur-1/summary/0029/: summary.md
.cacophony/agent/aurora-nlir-nlir-dev-aur-1/summary/0030/: summary.md
.cacophony/agent/aurora-nlir-nlir-dev-aur-1/summary/0031/: summary.md
.cacophony/agent/aurora-nlir-nlir-dev-aur-1/summary/0032/: summary.md
.cacophony/agent/aurora-nlir-nlir-dev-aur-1/summary/0033/: summary.md
.cacophony/agent/aurora-nlir-nlir-dev-aur-1/summary/0034/: summary.md
.cacophony/agent/aurora-nlir-nlir-dev-aur-1/summary/0035/: summary.md
.cacophony/agent/aurora-nlir-nlir-dev-aur-1/summary/0036/: summary.md
.cacophony/agent/aurora-nlir-nlir-dev-aur-1/summary/0037/: summary.md
.cacophony/agent/aurora-nlir-nlir-dev-aur-1/summary/0038/: summary.md
.cacophony/agent/aurora-nlir-nlir-dev-aur-1/summary/0039/: summary.md
.cacophony/agent/aurora-nlir-nlir-dev-aur-1/summary/0040/: summary.md
.cacophony/agent/aurora-nlir-nlir-dev-aur-1/summary/0041/: summary.md
.cacophony/agent/aurora-nlir-nlir-dev-aur-1/summary/0042/: summary.md
.cacophony/agent/aurora-nlir-nlir-dev-aur-1/summary/0043/: summary.md
.cacophony/agent/aurora-nlir-nlir-dev-aur-1/summary/0044/: summary.md
.cacophony/agent/aurora-nlir-nlir-dev-aur-1/summary/0045/: summary.md
.cacophony/agent/aurora-nlir-nlir-dev-aur-1/summary/0046/: summary.md
.cacophony/agent/aurora-nlir-nlir-dev-aur-1/summary/0047/: summary.md
.cacophony/agent/aurora-nlir-nlir-dev-aur-1/summary/0048/: summary.md
.cacophony/agent/aurora-nlir-nlir-dev-aur-1/summary/0049/: summary.md
.cacophony/agent/aurora-nlir-nlir-dev-aur-1/summary/0050/: summary.md
.cacophony/agent/aurora-nlir-nlir-dev-aur-1/summary/0051/: summary.md
.github/workflows/: ci.yml  pages.yml  release.yml  wasm.yml
crates/nlir-wasm/: Cargo.toml
crates/nlir-wasm/src/: lib.rs
docs/: cookbook.md
docs/design/: agent-vocabulary.md  basics-primitives.md  composable-core.md  nlir-wasm-p6-command-vm.md  nlir-wasm.md  quote-eval-macros.md  quote-eval.md
examples/: CATALOG-aur0.md  CATALOG-aur1.md  CATALOG-aur2.md  CATALOG-msm0.md  POWERMOVES.md  README.md  cases.md  golf-aur1-01-cognition.sh  golf-aur1-02-stackmachine.sh  golf-aur1-03-workingmem.sh  golf-aur1-04-alignment.sh  golf-aur1-05-recursion.sh  golf-aur1-06-perspective.sh  golf-aur1-07-consensus.sh  golf-aur1-08-steelman.sh  golf-aur1-09-panel.sh  golf-aur1-10-drift.sh  golf-aur1-100-reckoning.sh  golf-aur1-101-steelmanduel.sh  golf-aur1-102-header.sh  golf-aur1-103-interpreter.sh  golf-aur1-104-lengthnoncommute.sh  golf-aur1-105-qabsorb.sh  golf-aur1-106-faq.sh  golf-aur1-107-triagetrain.sh  golf-aur1-108-honestproposal.sh  golf-aur1-109-dynamics.sh  golf-aur1-11-faq.sh  golf-aur1-110-invarianttopic.sh  golf-aur1-111-registerpolarity.sh  golf-aur1-112-decisionmemo.sh  golf-aur1-113-subjectnoncommute.sh  golf-aur1-114-bookends.sh  golf-aur1-115-connective.sh  golf-aur1-116-decisionfork.sh  golf-aur1-117-clausewisenot.sh  golf-aur1-118-condenser.sh  golf-aur1-119-parens.sh  golf-aur1-12-counterfactual.sh  golf-aur1-13-tempered.sh  (+665 more)
extensions/: nlir.js
scripts/: build-docs.sh  build-showcase.py  pi-dropin.sh  preflight.sh  verify-showcase.py  verify-spec-ops.py
site/: hero-live.html
site/workspace/: index.html  workspace.css  workspace.js
src/: command_vm.rs  config.rs  context.rs  eval.rs  graph.rs  graph_svg.rs  index.rs  lexer.rs  lib.rs  line_editor.rs  llm.rs  main.rs  messages.rs  parser.rs  realise.rs  realiser.rs  session.rs  stack.rs  test_support.rs  tui.rs  value.rs
test/: integration.sh
(+224 files in other folders)
