[package]
name = "nlir"
version = "0.1.1"
edition = "2024"
rust-version = "1.85"
license = "MIT"
description = "nlir — natural-language IR: transpile a terse, sigil-laden shorthand into fluent English via a config-defined stack machine (deterministic or LLM per operator). Built on the harryaskham CLI stack."
repository = "https://github.com/harryaskham/nlir"

[[bin]]
name = "nlir"
path = "src/main.rs"

[lib]
name = "nlir"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
schemars = { version = "1", features = ["derive"] }
ureq = { version = "2", features = ["json"] }

# Ecosystem crates — pulled from github:harryaskham/* (not vendored) so the whole
# stack updates together. The flake rewrites these git pins via its flake inputs;
# `nix flake update` in this project moves them in lockstep.
mcp-cli = { git = "ssh://git@github.com/harryaskham/mcp-cli", branch = "main" }
updatable-cli = { git = "ssh://git@github.com/harryaskham/updatable-cli", branch = "main" }
feedback-cli = { git = "ssh://git@github.com/harryaskham/feedback-cli", branch = "main" }

[lints.rust]
unsafe_code = "forbid"

# feedback-cli / updatable-cli still carry a legacy https mcp-cli git dependency.
# Redirect that transitive source to the same ssh pin so the dependency graph
# resolves to one mcp-cli copy for direct cargo builds.
[patch."https://github.com/harryaskham/mcp-cli"]
mcp-cli = { git = "ssh://git@github.com/harryaskham/mcp-cli", branch = "main" }
