[package]
name = "nlir"
version = "0.1.1"
edition = "2024"
rust-version = "1.85"
license = "MIT"
description = "nlir — natural-language IR: transpile a terse, sigil-laden shorthand into fluent English via a config-defined stack machine (deterministic or LLM per operator). Built on the harryaskham CLI stack."
repository = "https://github.com/harryaskham/nlir"

[[bin]]
name = "nlir"
path = "src/main.rs"

[lib]
name = "nlir"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
schemars = { version = "1", features = ["derive"] }
# ureq (HTTP) is native-only (the llm anthropic backend); optional so the wasm
# build (nlir-wasm epic bd-360d0c) can drop it via `default-features = false`.
ureq = { version = "2", features = ["json"], optional = true }
# Raw-mode terminal input for the interactive REPL step-through (`:step` — Tab
# expands the next eval step). Only used behind a TTY check in the binary; never
# in the lib, so it is native-only + optional.
crossterm = { version = "0.28", optional = true }

# Line-editor / readline for the interactive REPL (`nlir repl`): command history
# (persisted to `~/.config/nlir/repl_history.txt`), full line editing (arrow
# keys, Ctrl-A/Ctrl-E/Ctrl-W, …), and Ctrl-C/Ctrl-D interrupt handling
# (bd-9d2d46). Only used behind a TTY check in the binary; never in the lib, so
# it is native-only + optional.
rustyline = { version = "14", optional = true }

# SVG rasterisation for `nlir show` graph PNGs + the kitty animation (graph-viz
# G4). Pure-Rust (usvg/tiny-skia) SVG->PNG; native-only + optional so it never
# enters the wasm build (the browser renders the SAME SVG in the DOM directly).
resvg = { version = "0.45", optional = true }

# Animated-PNG (APNG) encoding for `nlir show --save-animation` (graph-viz G4).
# Already in the tree transitively via resvg/tiny-skia; native-only + optional so
# it never enters the wasm build.
png = { version = "0.17", optional = true }

# base64 for the kitty graphics-protocol payload (`nlir show --kitty`, graph-viz
# G4). Already in the tree transitively; native-only + optional.
base64 = { version = "0.22", optional = true }

# Ecosystem crates — pulled from github:harryaskham/* (not vendored) so the whole
# stack updates together. The flake rewrites these git pins via its flake inputs;
# `nix flake update` in this project moves them in lockstep. All three are the
# native CLI/MCP surface (main.rs + the lib.rs command router) and do not build
# for wasm32 — optional, behind the default `native` feature.
mcp-cli = { git = "ssh://git@github.com/harryaskham/mcp-cli", branch = "main", optional = true }
updatable-cli = { git = "ssh://git@github.com/harryaskham/updatable-cli", branch = "main", optional = true }
feedback-cli = { git = "ssh://git@github.com/harryaskham/feedback-cli", branch = "main", optional = true }

# `native` (default) = the full CLI/MCP binary: HTTP llm backend (ureq), the REPL
# raw-mode step view (crossterm), and the MCP/self-update/feedback plumbing
# (mcp-cli/updatable-cli/feedback-cli). nlir-wasm depends with
# `default-features = false` to compile the pure evaluator core to wasm32 (the
# effectful backends are behind msm-0's Realiser seam + native twins). Default
# on = today's binary + tests are byte-identical.
[features]
default = ["native"]
native = ["dep:ureq", "dep:crossterm", "dep:rustyline", "dep:resvg", "dep:png", "dep:base64", "dep:mcp-cli", "dep:updatable-cli", "dep:feedback-cli"]

[lints.rust]
unsafe_code = "forbid"

# feedback-cli / updatable-cli still carry a legacy https mcp-cli git dependency.
# Redirect that transitive source to the same ssh pin so the dependency graph
# resolves to one mcp-cli copy for direct cargo builds.
[patch."https://github.com/harryaskham/mcp-cli"]
mcp-cli = { git = "ssh://git@github.com/harryaskham/mcp-cli", branch = "main" }
